// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDate 1`] = `
<span>
  comming soon
</span>
`;

exports[`ProductDate 2`] = `
<span>
  just then
</span>
`;

exports[`ProductDate 3`] = `
<span>
  30 seconds ago
</span>
`;

exports[`ProductDate 4`] = `
<span>
  a minute ago
</span>
`;

exports[`ProductDate 5`] = `
<span>
  30 minutes ago
</span>
`;

exports[`ProductDate 6`] = `
<span>
  1 hour ago
</span>
`;

exports[`ProductDate 7`] = `
<span>
  6 hours ago
</span>
`;

exports[`ProductDate 8`] = `
<span>
  yesterday
</span>
`;

exports[`ProductDate 9`] = `
<span>
  2 days ago
</span>
`;

exports[`ProductDate 10`] = `
<span>
  3 days ago
</span>
`;

exports[`ProductDate 11`] = `
<span>
  10/16/2017
</span>
`;
